
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int _ismbclower( unsigned int c )
{
    return ((c) >= 0x8281 && (c) <= 0x829a);

}
